# fxnc

./: CMakeLists.txt  Changelog.md  FXNAPI.h  FXNConfiguration.h  FXNFeature.h  FXNFeatureType.h  FXNModel.h  FXNModelConfiguration.h  FXNPredictor.h  FXNProfile.h  FXNSignature.h  FXNStatus.h  FXNValue.h  FXNValueMap.h  FXNVersion.h  Function.h  Function.hpp  README.md
cxx/: API.hpp  Configuration.hpp  Dialect.hpp  Function.hpp  Value.hpp
include/Function/: FXNConfiguration.h  FXNPrediction.h  FXNPredictor.h  FXNProfile.h  FXNValue.h  FXNValueMap.h  FXNVersion.h  Function.h  Function.hpp
include/Function/cxx/: API.hpp  Configuration.hpp  Dialect.hpp  ValueMap.hpp
